// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal demos > demo: Async 1`] = `
"<div><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Open Modal with async logic</span>
  </button>
  <!--teleport start-->
  <div class="ant-modal-wrap">
    <transition-stub name="ant-zoom" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div><!-- Mask -->
  <transition-stub name="ant-fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end-->
</div>"
`;

exports[`Modal demos > demo: Basic 1`] = `
"<div><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Open Modal</span>
  </button>
  <!--teleport start-->
  <div class="ant-modal-wrap">
    <transition-stub name="ant-zoom" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div><!-- Mask -->
  <transition-stub name="ant-fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end-->
</div>"
`;

exports[`Modal demos > demo: Centered 1`] = `
"<button class="ant-btn ant-btn-solid ant-btn-md" type="button">
  <!--v-if-->
  <!--v-if--><span class="ant-btn-content">Vertically centered modal</span>
</button>
<!--teleport start-->

<div class="ant-modal-wrap ant-modal-centered">
  <transition-stub name="ant-zoom" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<!-- Mask -->
<transition-stub name="ant-fade" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>

<!--teleport end-->"
`;

exports[`Modal demos > demo: Footer 1`] = `
"<div><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Open Modal with customized footer</span>
  </button>
  <!--teleport start-->
  <div class="ant-modal-wrap">
    <transition-stub name="ant-zoom" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div><!-- Mask -->
  <transition-stub name="ant-fade" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end-->
</div>"
`;

exports[`Modal demos > demo: NoFooter 1`] = `
"<button class="ant-btn ant-btn-solid ant-btn-md" type="button">
  <!--v-if-->
  <!--v-if--><span class="ant-btn-content">Open Modal without footer</span>
</button>
<!--teleport start-->

<div class="ant-modal-wrap">
  <transition-stub name="ant-zoom" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<!-- Mask -->
<transition-stub name="ant-fade" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>

<!--teleport end-->"
`;
